--- a/PrintTest/PrintTest/App.xaml
+++ b/PrintTest/PrintTest/App.xaml
@@ -2,6 +2,7 @@
     x:Class="PrintTest.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PrintTest">
+    xmlns:local="using:PrintTest"
+    RequestedTheme="Light">
 
 </Application>
