--- a/App1/App1/MainPage.xaml
+++ b/App1/App1/MainPage.xaml
@@ -7,12 +7,20 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+    
+    <Page.Resources>
+        <Chart:PaletteEntryCollection x:Key="CustomPaletteEntryCollection">
+            <SolidColorBrush Color="#FFC6D6A5"/>
+            <SolidColorBrush Color="#FFCECEC6"/>
+        </Chart:PaletteEntryCollection>
+        <Chart:ChartPalette x:Key="CustomChartPalette" Name="CustomChartPalette" FillEntries="{StaticResource CustomPaletteEntryCollection}" StrokeEntries="{StaticResource CustomPaletteEntryCollection}"/>
+    </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
         <Canvas x:Name="cvs" HorizontalAlignment="Center" VerticalAlignment="Center" Width="300" Height="300" Background="Transparent">
 
-            <Chart:RadPieChart x:Name="pie" ClipToBounds="False" Width="100" Height="100" Canvas.Left="30" Canvas.Top="20" MinWidth="30" MinHeight="30">
+            <Chart:RadPieChart x:Name="pie" Palette="{StaticResource CustomChartPalette}" ClipToBounds="False" Width="100" Height="100" Canvas.Left="30" Canvas.Top="20" MinWidth="30" MinHeight="30">
                 <Chart:PieSeries ShowLabels="False" AngleRange="{Binding AngleRange}" ItemsSource="{Binding ItemsSource}">
                     <Chart:PieSeries.ValueBinding>
                         <Chart:PropertyNameDataPointBinding PropertyName="Value"/>
@@ -25,7 +33,7 @@
 
         </Canvas>
 
-        <Grid Height="200" Width="200" Margin="960,325,206,243" Background="#FFC6D6A5">
+        <Grid x:Name="grid" Height="200" Width="200" Margin="960,325,206,243" Background="#FFC6D6A5">
             <TextBox x:Name="text" Text="20" Height="20" Margin="14,53,37,115"/>
             <Button Content="Draw" Click="Button_Click" Margin="7,87,0,69" Height="44" Width="80"/>
             <Button Content="Save" Click="Save_Click" Margin="86,87,0,69" Height="44" Width="80"/>
