--- a/App1/App1/MainPage.xaml
+++ b/App1/App1/MainPage.xaml
@@ -60,8 +60,8 @@
             <Button Content="Save" Click="Save_Click" Margin="86,87,0,69" Height="44" Width="80"/>
         </Grid>
 
-        <Image HorizontalAlignment="Left" Height="100" Margin="240,90,0,0" VerticalAlignment="Top" Width="100"
-               x:Name="img"/>
+        <Image HorizontalAlignment="Left" Height="300" Margin="40,140,0,0" VerticalAlignment="Top" Width="300"
+               x:Name="img" Source="C:\Users\Ejun\Pictures\XXX.png"/>
 
     </Grid>
 </Page>
