--- a/App1/App1/MainPage.xaml
+++ b/App1/App1/MainPage.xaml
@@ -1,5 +1,5 @@
-﻿<Page 
-    xmlns:Chart="using:Telerik.UI.Xaml.Controls.Chart" 
+﻿<Page
+    xmlns:Chart="using:Telerik.UI.Xaml.Controls.Chart"
     x:Class="App1.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,29 +10,29 @@
 
     <Page.Resources>
         <Chart:PaletteEntryCollection x:Key="CustomPaletteEntryCollection">
-            <SolidColorBrush Color="#FFC6D6A5"/>
-            <SolidColorBrush Color="#FFCECEC6"/>
+            <SolidColorBrush Color="#FFC6D6A5" />
+            <SolidColorBrush Color="#FFCECEC6" />
         </Chart:PaletteEntryCollection>
-        <Chart:ChartPalette x:Key="CustomChartPalette" Name="CustomChartPalette" FillEntries="{StaticResource CustomPaletteEntryCollection}" StrokeEntries="{StaticResource CustomPaletteEntryCollection}"/>
+        <Chart:ChartPalette x:Key="CustomChartPalette" Name="CustomChartPalette" FillEntries="{StaticResource CustomPaletteEntryCollection}" StrokeEntries="{StaticResource CustomPaletteEntryCollection}" />
         <ControlTemplate x:Key="Template">
             <Grid>
-                <TextBlock Text="{Binding ModelText}" FontSize="20"/>
+                <TextBlock Text="{Binding ModelText}" FontSize="20" />
             </Grid>
         </ControlTemplate>
         <ControlTemplate x:Key="ControlTemplate">
             <StackPanel Orientation="Vertical" Width="35">
-                <TextBlock Text="{Binding TextA}"/>
-                <TextBlock Text="{Binding TextB}"/>
+                <TextBlock Text="{Binding TextA}" />
+                <TextBlock Text="{Binding TextB}" />
             </StackPanel>
         </ControlTemplate>
         <ControlTemplate x:Key="ttgg">
             <Grid Margin="5,0">
                 <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" Text="{Binding TextA}"/>
-                <TextBlock Grid.Row="1" Text="{Binding TextB}"/>
+                <TextBlock Grid.Row="0" Text="{Binding TextA}" />
+                <TextBlock Grid.Row="1" Text="{Binding TextB}" />
             </Grid>
         </ControlTemplate>
     </Page.Resources>
@@ -44,34 +44,93 @@
             <Chart:RadPieChart x:Name="pie" Palette="{StaticResource CustomChartPalette}" ClipToBounds="False" Width="100" Height="100" Canvas.Left="30" Canvas.Top="20" MinWidth="30" MinHeight="30">
                 <Chart:PieSeries ShowLabels="False" AngleRange="{Binding AngleRange}" ItemsSource="{Binding ItemsSource}">
                     <Chart:PieSeries.ValueBinding>
-                        <Chart:PropertyNameDataPointBinding PropertyName="Value"/>
+                        <Chart:PropertyNameDataPointBinding PropertyName="Value" />
                     </Chart:PieSeries.ValueBinding>
                     <Chart:PieSeries.IsSelectedBinding>
-                        <Chart:PropertyNameDataPointBinding PropertyName="IsSelected"/>
+                        <Chart:PropertyNameDataPointBinding PropertyName="IsSelected" />
                     </Chart:PieSeries.IsSelectedBinding>
                 </Chart:PieSeries>
             </Chart:RadPieChart>
-
         </Canvas>
 
         <Grid x:Name="grid" Height="Auto" Width="Auto" Margin="850,190,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FFC6D6A5">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <TextBox x:Name="text" Text="20" Height="20" Width="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="2"/>
-            <Button Content="Draw" Click="Button_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2"/>
-            <Button Content="Save" Click="Save_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2"/>
-            <Button Content="SetImg" Click="SetImg_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2"/>
+            <TextBox x:Name="text" Text="20" Height="20" Width="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="2" />
+            <Button Content="Draw" Click="Button_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
+            <Button Content="Save" Click="Save_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
+            <Button Content="SetImg" Click="SetImg_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
         </Grid>
 
         <Image HorizontalAlignment="Left" Height="300" Margin="40,140,0,0" VerticalAlignment="Top" Width="300"
-               x:Name="img" Source="C:\Users\Ejun\Pictures\XXX.png"/>
+               x:Name="img" Source="C:\Users\Ejun\Pictures\XXX.png" />
 
+        <ComboBox Width="200" Height="35" Margin="300,445,566,288">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20" />
+                        <TextBlock Text="123" Grid.Column="1" Margin="10,0,0,0" FontSize="15" />
+                    </Grid>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+            <x:Int32>1</x:Int32>
+            <x:Int32>1</x:Int32>
+            <x:Int32>1</x:Int32>
+            <x:Int32>1</x:Int32>
+            <x:Int32>1</x:Int32>
+        </ComboBox>
+
+        <Button Content="Click" Width="200" Height="50" Margin="707,442,0,276">
+            <Button.Flyout>
+                <Flyout Placement="Bottom">
+                    <Grid Width="150" Height="90">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <TextBlock Text="地區選項" />
+                        <ItemsControl Grid.Row="1">
+                            <ItemsControl.Template>
+                                <ControlTemplate>
+                                    <ScrollViewer HorizontalScrollMode="Disabled" VerticalScrollMode="Auto">
+                                        <ItemsPresenter/>
+                                    </ScrollViewer>
+                                </ControlTemplate>
+                            </ItemsControl.Template>
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+                                        <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20" />
+                                        <TextBlock Text="123" Grid.Column="1" Margin="10,0,0,0" FontSize="15" />
+                                    </Grid>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <x:Int32>1</x:Int32>
+                            <x:Int32>1</x:Int32>
+                            <x:Int32>1</x:Int32>
+                            <x:Int32>1</x:Int32>
+                            <x:Int32>1</x:Int32>
+                            <x:Int32>1</x:Int32>
+                        </ItemsControl>
+                    </Grid>
+                </Flyout>
+            </Button.Flyout>
+        </Button>
     </Grid>
 </Page>
