--- a/App1/App1/MainPage.xaml
+++ b/App1/App1/MainPage.xaml
@@ -38,99 +38,114 @@
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-        <Canvas x:Name="cvs" HorizontalAlignment="Center" VerticalAlignment="Center" Width="300" Height="300" Background="Transparent" Margin="435,90,631,378">
-
-            <Chart:RadPieChart x:Name="pie" Palette="{StaticResource CustomChartPalette}" ClipToBounds="False" Width="100" Height="100" Canvas.Left="30" Canvas.Top="20" MinWidth="30" MinHeight="30">
-                <Chart:PieSeries ShowLabels="False" AngleRange="{Binding AngleRange}" ItemsSource="{Binding ItemsSource}">
-                    <Chart:PieSeries.ValueBinding>
-                        <Chart:PropertyNameDataPointBinding PropertyName="Value" />
-                    </Chart:PieSeries.ValueBinding>
-                    <Chart:PieSeries.IsSelectedBinding>
-                        <Chart:PropertyNameDataPointBinding PropertyName="IsSelected" />
-                    </Chart:PieSeries.IsSelectedBinding>
-                </Chart:PieSeries>
-            </Chart:RadPieChart>
-        </Canvas>
-
-        <Grid x:Name="grid" Height="Auto" Width="Auto" Margin="850,190,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FFC6D6A5">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <TextBox x:Name="text" Text="20" Height="20" Width="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="2" />
-            <Button Content="Draw" Click="Button_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
-            <Button Content="Save" Click="Save_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
-            <Button Content="SetImg" Click="SetImg_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
-        </Grid>
-
-        <Image HorizontalAlignment="Left" Height="300" Margin="40,140,0,0" VerticalAlignment="Top" Width="300"
-               x:Name="img" Source="C:\Users\Ejun\Pictures\XXX.png" />
-
-        <ComboBox Width="200" Height="35" Margin="300,445,566,288">
-            <ComboBox.ItemTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20" />
-                        <TextBlock Text="123" Grid.Column="1" Margin="10,0,0,0" FontSize="15" />
-                    </Grid>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-            <x:Int32>1</x:Int32>
-            <x:Int32>1</x:Int32>
-            <x:Int32>1</x:Int32>
-            <x:Int32>1</x:Int32>
-            <x:Int32>1</x:Int32>
-        </ComboBox>
-
-        <Button Content="Click" Width="200" Height="50" Margin="707,442,0,276">
-            <Button.Flyout>
-                <Flyout Placement="Bottom">
-                    <Grid Width="150" Height="90">
+        
+        <Border HorizontalAlignment="Left" VerticalAlignment="Top" BorderBrush="Black" BorderThickness="2" Margin="10,10,0,0" Height="250">
+            <Grid Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Canvas x:Name="cvs" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" Height="230" Background="Transparent">
+                    <Chart:RadPieChart x:Name="pie" Palette="{StaticResource CustomChartPalette}" ClipToBounds="False" Width="100" Height="100" Canvas.Left="30" Canvas.Top="20" MinWidth="30" MinHeight="30">
+                        <Chart:PieSeries ShowLabels="False" AngleRange="{Binding AngleRange}" ItemsSource="{Binding ItemsSource}">
+                            <Chart:PieSeries.ValueBinding>
+                                <Chart:PropertyNameDataPointBinding PropertyName="Value" />
+                            </Chart:PieSeries.ValueBinding>
+                            <Chart:PieSeries.IsSelectedBinding>
+                                <Chart:PropertyNameDataPointBinding PropertyName="IsSelected" />
+                            </Chart:PieSeries.IsSelectedBinding>
+                        </Chart:PieSeries>
+                    </Chart:RadPieChart>
+                </Canvas>
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid x:Name="grid" Height="Auto" Width="Auto" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#FFC6D6A5">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <TextBlock Text="地區選項" />
-                        <ItemsControl Grid.Row="1">
-                            <ItemsControl.Template>
-                                <ControlTemplate>
-                                    <ScrollViewer HorizontalScrollMode="Disabled" VerticalScrollMode="Auto">
-                                        <ItemsPresenter/>
-                                    </ScrollViewer>
-                                </ControlTemplate>
-                            </ItemsControl.Template>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto" />
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
-                                        <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20" />
-                                        <TextBlock Text="123" Grid.Column="1" Margin="10,0,0,0" FontSize="15" />
-                                    </Grid>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                            <x:Int32>1</x:Int32>
-                            <x:Int32>1</x:Int32>
-                            <x:Int32>1</x:Int32>
-                            <x:Int32>1</x:Int32>
-                            <x:Int32>1</x:Int32>
-                            <x:Int32>1</x:Int32>
-                        </ItemsControl>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="text" Text="20" Height="20" Width="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="2" InputScope="Number" />
+                        <Button Content="Draw" Click="Button_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
+                        <Button Content="Save" Click="Save_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
+                        <Button Content="SetImg" Click="SetImg_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
                     </Grid>
-                </Flyout>
-            </Button.Flyout>
-        </Button>
+                    <Image Grid.Row="1" HorizontalAlignment="Left" Height="145" VerticalAlignment="Top" Width="216" x:Name="img" Source="C:\Users\Ejun\Pictures\XXX.png" />
+                </Grid>
+            </Grid>
+        </Border>
+      
+        <Border HorizontalAlignment="Left" VerticalAlignment="Top" BorderBrush="Black" BorderThickness="2" Margin="10,270,0,0" Width="400" Height="70">
+            <StackPanel Margin="5" Orientation="Horizontal">
+                <ComboBox Width="200" Height="35">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20" />
+                                <TextBlock Text="123" Grid.Column="1" Margin="10,0,0,0" FontSize="15" />
+                            </Grid>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                    <x:Int32>1</x:Int32>
+                    <x:Int32>1</x:Int32>
+                    <x:Int32>1</x:Int32>
+                    <x:Int32>1</x:Int32>
+                    <x:Int32>1</x:Int32>
+                </ComboBox>
+                <Button Content="Click" Width="200" Height="50">
+                    <Button.Flyout>
+                        <Flyout Placement="Bottom">
+                            <Grid Width="150" Height="90">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="地區選項" />
+                                <ItemsControl Grid.Row="1">
+                                    <ItemsControl.Template>
+                                        <ControlTemplate>
+                                            <ScrollViewer HorizontalScrollMode="Disabled" VerticalScrollMode="Auto">
+                                                <ItemsPresenter />
+                                            </ScrollViewer>
+                                        </ControlTemplate>
+                                    </ItemsControl.Template>
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="Auto" />
+                                                    <ColumnDefinition Width="*" />
+                                                </Grid.ColumnDefinitions>
+                                                <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20" />
+                                                <TextBlock Text="123" Grid.Column="1" Margin="10,0,0,0" FontSize="15" />
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                    <x:Int32>1</x:Int32>
+                                    <x:Int32>1</x:Int32>
+                                    <x:Int32>1</x:Int32>
+                                    <x:Int32>1</x:Int32>
+                                    <x:Int32>1</x:Int32>
+                                    <x:Int32>1</x:Int32>
+                                </ItemsControl>
+                            </Grid>
+                        </Flyout>
+                    </Button.Flyout>
+                </Button>
+            </StackPanel>
+        </Border>
+
+
     </Grid>
 </Page>
