--- a/App1/App1/MainPage.xaml
+++ b/App1/App1/MainPage.xaml
@@ -6,7 +6,8 @@
     xmlns:local="using:App1"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
 
     <Page.Resources>
         <Chart:PaletteEntryCollection x:Key="CustomPaletteEntryCollection">
@@ -38,7 +39,7 @@
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        
+
         <Border HorizontalAlignment="Left" VerticalAlignment="Top" BorderBrush="Black" BorderThickness="2" Margin="10,10,0,0" Height="250">
             <Grid Margin="5">
                 <Grid.ColumnDefinitions>
@@ -77,11 +78,11 @@
                         <Button Content="Save" Click="Save_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
                         <Button Content="SetImg" Click="SetImg_Click" Height="40" Width="Auto" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="2" />
                     </Grid>
-                    <Image Grid.Row="1" HorizontalAlignment="Left" Height="145" VerticalAlignment="Top" Width="216" x:Name="img" Source="C:\Users\Ejun\Pictures\XXX.png" />
+                    <Image Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" x:Name="img" Source="C:\Users\Ejun\Pictures\XXX.png" />
                 </Grid>
             </Grid>
         </Border>
-      
+
         <Border HorizontalAlignment="Left" VerticalAlignment="Top" BorderBrush="Black" BorderThickness="2" Margin="10,270,0,0" Width="400" Height="70">
             <StackPanel Margin="5" Orientation="Horizontal">
                 <ComboBox Width="200" Height="35">
@@ -92,8 +93,8 @@
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20" />
-                                <TextBlock Text="123" Grid.Column="1" Margin="10,0,0,0" FontSize="15" />
+                                <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center" />
+                                <TextBlock Text="123" Grid.Column="1" FontSize="15" />
                             </Grid>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
@@ -122,13 +123,13 @@
                                     </ItemsControl.Template>
                                     <ItemsControl.ItemTemplate>
                                         <DataTemplate>
-                                            <Grid>
+                                            <Grid Margin="1">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="Auto" />
                                                     <ColumnDefinition Width="*" />
                                                 </Grid.ColumnDefinitions>
-                                                <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center" Width="20" Height="20" />
-                                                <TextBlock Text="123" Grid.Column="1" Margin="10,0,0,0" FontSize="15" />
+                                                <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                                <TextBlock Text="123" Grid.Column="1" FontSize="15" VerticalAlignment="Center" />
                                             </Grid>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
@@ -146,6 +147,30 @@
             </StackPanel>
         </Border>
 
-
+        <Border HorizontalAlignment="Left" VerticalAlignment="Top" BorderBrush="Black" BorderThickness="2" Margin="10,350,0,0" Width="400" Height="200">
+            <Chart:RadCartesianChart>
+                <Chart:RadCartesianChart.VerticalAxis>
+                    <Chart:LinearAxis />
+                </Chart:RadCartesianChart.VerticalAxis>
+                <Chart:RadCartesianChart.HorizontalAxis>
+                    <Chart:CategoricalAxis />
+                </Chart:RadCartesianChart.HorizontalAxis>
+                <Chart:LineSeries ItemsSource="{Binding Line}">
+                    <Chart:LineSeries.ValueBinding>
+                        <Chart:PropertyNameDataPointBinding PropertyName="Value"/>
+                    </Chart:LineSeries.ValueBinding>
+                    <Chart:LineSeries.CategoryBinding>
+                        <Chart:PropertyNameDataPointBinding PropertyName="Category"/>
+                    </Chart:LineSeries.CategoryBinding>
+                    <Chart:LineSeries.StrokeDashArray>
+                        <DoubleCollection>
+                            <x:Double>10</x:Double>
+                            <x:Double>5</x:Double>
+                        </DoubleCollection>
+                    </Chart:LineSeries.StrokeDashArray>
+                </Chart:LineSeries>
+            </Chart:RadCartesianChart>
+        </Border>
+        
     </Grid>
 </Page>
