--- a/App1/App1/MainPage.xaml
+++ b/App1/App1/MainPage.xaml
@@ -1,4 +1,5 @@
 ﻿<Page
+    xmlns:Input="using:Telerik.UI.Xaml.Controls.Input" 
     xmlns:Chart="using:Telerik.UI.Xaml.Controls.Chart"
     x:Class="App1.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -172,5 +173,8 @@
             </Chart:RadCartesianChart>
         </Border>
         
+        <Border HorizontalAlignment="Left" VerticalAlignment="Top" BorderBrush="Black" BorderThickness="2" Margin="10,560,0,0" Width="400" Height="200">
+            <Input:RadRangeSlider ShowValueToolTip="False" ShowRangeToolTip="False" />
+        </Border>
     </Grid>
 </Page>
