--- a/App1/App1/MainPage.xaml
+++ b/App1/App1/MainPage.xaml
@@ -1,5 +1,7 @@
 ﻿<Page
-    xmlns:Input="using:Telerik.UI.Xaml.Controls.Input" 
+    xmlns:Input="using:Telerik.UI.Xaml.Controls.Input"
+    xmlns:Primitives="using:Telerik.UI.Xaml.Controls.Primitives"
+    xmlns:RangeSliderPrimitives="using:Telerik.UI.Xaml.Controls.Primitives.RangeSlider"
     xmlns:Chart="using:Telerik.UI.Xaml.Controls.Chart"
     x:Class="App1.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -129,7 +131,7 @@
                                                     <ColumnDefinition Width="Auto" />
                                                     <ColumnDefinition Width="*" />
                                                 </Grid.ColumnDefinitions>
-                                                <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                                <CheckBox VerticalAlignment="Center" HorizontalAlignment="Center" />
                                                 <TextBlock Text="123" Grid.Column="1" FontSize="15" VerticalAlignment="Center" />
                                             </Grid>
                                         </DataTemplate>
@@ -158,10 +160,10 @@
                 </Chart:RadCartesianChart.HorizontalAxis>
                 <Chart:LineSeries ItemsSource="{Binding Line}">
                     <Chart:LineSeries.ValueBinding>
-                        <Chart:PropertyNameDataPointBinding PropertyName="Value"/>
+                        <Chart:PropertyNameDataPointBinding PropertyName="Value" />
                     </Chart:LineSeries.ValueBinding>
                     <Chart:LineSeries.CategoryBinding>
-                        <Chart:PropertyNameDataPointBinding PropertyName="Category"/>
+                        <Chart:PropertyNameDataPointBinding PropertyName="Category" />
                     </Chart:LineSeries.CategoryBinding>
                     <Chart:LineSeries.StrokeDashArray>
                         <DoubleCollection>
@@ -172,9 +174,43 @@
                 </Chart:LineSeries>
             </Chart:RadCartesianChart>
         </Border>
-        
+
         <Border HorizontalAlignment="Left" VerticalAlignment="Top" BorderBrush="Black" BorderThickness="2" Margin="10,560,0,0" Width="400" Height="200">
-            <Input:RadRangeSlider ShowValueToolTip="False" ShowRangeToolTip="False" />
+            <Grid Width="300">
+                <Rectangle Fill="Green" Margin="0,11,0,0" Height="9" VerticalAlignment="Top" />
+                <Rectangle Fill="Red" Margin="0,11,0,0" Width="40" Height="9" VerticalAlignment="Top" HorizontalAlignment="Left" />
+                <Input:RadRangeSlider Maximum="1.5" SelectionStart="0.2" SelectionEnd="0.3" TickFrequency="0.01" SnapsTo="Ticks" ToolTipFormat="{}{0:0%}" LabelFormat="{}{0:0%}">
+                    <Input:RadRangeSlider.BottomRightScaleStyle>
+                        <Style TargetType="Primitives:ScalePrimitive">
+                            <Setter Property="Visibility" Value="Collapsed" />
+                        </Style>
+                    </Input:RadRangeSlider.BottomRightScaleStyle>
+                    <Input:RadRangeSlider.TopLeftScaleStyle>
+                        <Style TargetType="Primitives:ScalePrimitive">
+                            <Setter Property="Visibility" Value="Collapsed" />
+                        </Style>
+                    </Input:RadRangeSlider.TopLeftScaleStyle>
+                    <Input:RadRangeSlider.Resources>
+                        <Style TargetType="RangeSliderPrimitives:RangeTrackPrimitive">
+                            <Setter Property="Background" Value="Transparent" />
+                        </Style>
+                    </Input:RadRangeSlider.Resources>
+                    <Input:RadRangeSlider.SliderPrimitiveStyle>
+                        <Style TargetType="Primitives:RangeSliderPrimitive">
+                            <Setter Property="SelectionMiddleThumbStyle">
+                                <Setter.Value>
+                                    <Style TargetType="Thumb">
+                                        <Setter Property="BorderThickness" Value="0" />
+                                        <Setter Property="Background" Value="Yellow" />
+                                        <Setter Property="Height" Value="11" />
+                                        <Setter Property="IsHitTestVisible" Value="False" />
+                                    </Style>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Input:RadRangeSlider.SliderPrimitiveStyle>
+                </Input:RadRangeSlider>
+            </Grid>
         </Border>
     </Grid>
 </Page>
